--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "author": "Urban Cvek <urbancvek@cunomo.com> (http://github.com/urbancvek)",
   "dependencies": {
+    "axios": "^0.15.3",
     "core-decorators": "^0.15.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
